Styles html mails

--- a/src/pages/mail-two.html
+++ b/src/pages/mail-two.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body>
+<body style="margin: 0;">
   <header className="header-mail">
     <div className="image-header">
       <img src="../images/image-header-mail.png" alt="gatorade" title="gatorade" />
@@ -44,8 +44,8 @@
       </ul>
     </div>
     <div className="text-footer">
-      <h2>Este email fue enviado a <span>jim@mail.com</span></h2>
-      <h2>gatorade</h2>
+      <h2 style="text-transform: uppercase; font-family: sans-serif;">Este email fue enviado a <span>jim@mail.com</span></h2>
+      <h2 style="text-transform: uppercase; font-family: sans-serif;">gatorade</h2>
     </div>
     <div className="image-inferior">
       <img src="../images/bg-mail-four.png" alt="gatorade" title="gatorade" />
