--- a/src/pages/mail-three.html
+++ b/src/pages/mail-three.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body>
+<body style="margin: 0;">
   
   <header className="header-mail">
     <div className="image-header">
@@ -14,15 +14,15 @@
     </div>
   </header>
 
-  <main className="mail-three" style="height: 50rem; background-size: cover; position: relative; width: 33.4rem;">
+  <main className="mail-three" style="height: 50rem; background-size: cover; position: relative; width: 600px;">
     <img src="../images/bg-mail-three.png" alt="gatorade" title="gatorade" style="position: absolute; z-index: -10; height: 100%; object-fit: cover;" />
-    <div className="text-mail-three" style="position: relative; transform: translate(0%, -50%); padding: 1rem 2rem; max-width: 35rem; height: 100%;">
-      <h1 style="text-transform: uppercase; font-family: PlexesPro black; margin: 0; line-height: 0.8; padding: 1rem; top: 35%; color: white; font-weight: 300; display: flex; flex-direction: column; align-items: flex-start; font-size: 1.8rem; position: absolute; transform: translate(0%, -50%); left: 5%; width: 21rem;">recarga energia con <span style="font-size: 3.4rem; color: white; font-weight: 700; font-family: sans-serif;">gatorade</span></h1>
+    <div className="text-mail-three" style="position: relative; transform: padding: 1rem 2rem; max-width: 35rem; height: 100%;">
+      <h1 style="text-transform: uppercase; font-family: sans-serif; margin: 0; line-height: 0.8; padding: 1rem; top: 35%; color: white; font-weight: 300; display: flex; flex-direction: column; align-items: flex-start; font-size: 1.8rem; position: absolute; transform: translate(0%, -50%); left: 5%; width: 21rem;">recarga energia con <span style="font-size: 3.4rem; color: white; font-weight: 700; font-family: sans-serif;">gatorade</span></h1>
       <h2 className="formula" style="font-size: 2.6rem; width: 24rem; font-size: 1.4rem; position: absolute; transform: translate(0%, -50%); left: 5%; top: 42%; color: white; text-align: left; padding: 1rem;">la formula optima de hidratacion para deportistas</h2>
       <h2 className="verification" style="position: absolute; font-size: 1.4rem; -webkit-text-stroke: unset; color: white; transform: translate(-50%, -50%); left: 50%; top: 55%; width: 13.7rem; text-align: center; line-height: 1.4; ">codigo de verificacion <span style="color: #fb5030;">24012021</span></h2>
     </div>
     <div className="button-redeem" style="position: absolute; transform: translate(-50%, -50%); top: 66%; left: 50%; background: #ff4700; border-radius: 1rem; width: 12rem; height: 2.1rem; text-align: center; display: flex; flex-direction: column; justify-content: center;">
-      <a style="text-transform: uppercase; color: white !important; font-family: 'Montserrat medium';">redime ahora</a>
+      <a style="text-transform: uppercase; color: white !important; font-family: sans-serif;">redime ahora</a>
     </div>
   </main>
 
